cycles can not start sampling while a new curve object with the default radius in the scene #97584

Closed
opened 2022-04-24 03:56:03 +02:00 by yonghao lv · 12 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.15

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-23 13:09, hash: c486da0238

Short description of error
cycles can not start sampling while a new curve object with the default radius in the scene

Exact steps for others to reproduce the error

  • import this abc file
  • Enable New curve type from experimental tab
  • {nav Shift + A > Curves > Select Any}
  • Create node tree as shown in video on this curve object
  • Switch render to cycles
  • Change radius value
    cat.abc
    2022-04-24 09-50-34.mp4
**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.15 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-23 13:09, hash: `c486da0238` **Short description of error** cycles can not start sampling while a new curve object with the default radius in the scene **Exact steps for others to reproduce the error** - import this abc file - Enable New curve type from experimental tab - {nav Shift + A > Curves > Select Any} - Create node tree as shown in video on this curve object - Switch render to cycles - Change radius value [cat.abc](https://archive.blender.org/developer/F13020472/cat.abc) [2022-04-24 09-50-34.mp4](https://archive.blender.org/developer/F13020460/2022-04-24_09-50-34.mp4)
Author

Added subscriber: @1029910278

Added subscriber: @1029910278
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

Added subscribers: @HooglyBoogly, @brecht

Added subscribers: @HooglyBoogly, @brecht

@HooglyBoogly can we lower the default radius value in this node? I think a default radius of 1 meter is not that useful, and it might make sense to set it to something that is a good default for hair.

In general, rendering many overlapping curves like this is going to lead to poor performance, and there is not a lot we can do about it. Especially for ray-tracing bounds are not going to be very tight and every ray may intersect hundreds of thousands of hairs.

@HooglyBoogly can we lower the default radius value in this node? I think a default radius of 1 meter is not that useful, and it might make sense to set it to something that is a good default for hair. In general, rendering many overlapping curves like this is going to lead to poor performance, and there is not a lot we can do about it. Especially for ray-tracing bounds are not going to be very tight and every ray may intersect hundreds of thousands of hairs.
Member

There's a bit of a conflict here between the uses for curves here I think (lamp-posts, tentacles, trees, cables, tubes, hair, carpets).

I'm a little skeptical of a "good default for hair", since I'd expect that's something like 1mm or less. That's practically invisible if you're not zoomed in very closely.

Do you think 0.1m is reasonable? That would be visible when more zoomed out but less absurd for hair uses cases.

There's a bit of a conflict here between the uses for curves here I think (lamp-posts, tentacles, trees, cables, tubes, hair, carpets). I'm a little skeptical of a "good default for hair", since I'd expect that's something like 1mm or less. That's practically invisible if you're not zoomed in very closely. Do you think 0.1m is reasonable? That would be visible when more zoomed out but less absurd for hair uses cases.

Added subscriber: @juang3d

Added subscriber: @juang3d

If I may, .01m seems more reasonable, 1cm, and can prevent problems in many situations, more than 10cm I think.

Just my 2 cents :)

If I may, .01m seems more reasonable, 1cm, and can prevent problems in many situations, more than 10cm I think. Just my 2 cents :)

With 10cm thick hair it's still going to be pretty bad when accidentally using that, nearly all of it will overlap still.

Something like 1cm or a bit less like 0.5cm would be a lot better, matching a typical cable or twig.

With 10cm thick hair it's still going to be pretty bad when accidentally using that, nearly all of it will overlap still. Something like 1cm or a bit less like 0.5cm would be a lot better, matching a typical cable or twig.
Author

I notice that not all situation is suitable for small default value. Some company use 'mm' to produce their 3d print wax model (for example, jewel), so 1mm in these scenes is fine.
Maybe just set a color tips on the render view(also on the set radius node) , and exclude the curve object from rendering.

I notice that not all situation is suitable for small default value. Some company use 'mm' to produce their 3d print wax model (for example, jewel), so 1mm in these scenes is fine. Maybe just set a color tips on the render view(also on the set radius node) , and exclude the curve object from rendering.

This issue was referenced by 8159e0a666

This issue was referenced by 8159e0a666d3d51936e50a36912f38386570af11

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2022-07-08 16:42:35 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97584
No description provided.