source/blender/nodes/geometry/nodes/node_geo_set_curve_radius.cc
@@ -10,7 +10,7 @@ static void node_declare(NodeDeclarationBuilder &b)
   b.add_input<decl::Bool>(N_("Selection")).default_value(true).hide_value().supports_field();
   b.add_input<decl::Float>(N_("Radius"))
       .min(0.0f)
-      .default_value(1.0f)
+      .default_value(0.005f)
       .supports_field()
       .subtype(PROP_DISTANCE);
   b.add_output<decl::Geometry>(N_("Curve"));
